--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"gulp-rename": "^1.4.0",
 		"gulp-rsync": "0.0.8",
 		"gulp-sass": "^4.0.2",
+		"gulp-sourcemaps": "^2.6.5",
 		"gulp-uglify": "^3.0.2",
 		"gulp-util": "^3.0.8"
 	}
